# SimpleEdit

./: README.md  simpleEditPre.cpp
SimpleEditor/: CMakeLists.txt  main  main.cpp  main.cpp~  main.h
SimpleEditor0.2.1/: CMakeLists.txt  main.cpp  run.sh
